# pyelfs

./: LICENSE.txt  README.md  entry_points.cfg  requirements.txt  setup.cfg
pyelfs/: __init__.py  cli.py  file_agent.py  null_agent.py  sftp_agent.py  sftp_auth.py  util.py
tests/: test_cli.py  test_sftp_agent.py  test_sftp_auth.py
