[metadata]
name = pyelfs
version = attr: pyelfs.__version__
url = https://github.com/kyusque/pyelfs
author = Yusuke Kawashima
author_email = y-kawashima@hoshi.ac.jp
license_files = LICENSE.txt
description = wtl: Custom transfer agents for git-lfs.
long_description = file: README.md

[options]
zip_safe = False
packages = find:
install_requires =
  paramiko
entry_points = file: entry_points.cfg
python_requires = >=3.6